fixed text not wrapping in header

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex: 1;
+    margin: 0;
 }
 
 
@@ -15,6 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
+    width: 100%;
 }
 
 .header .top {
@@ -25,18 +28,25 @@ body {
 .header .middle {
     display: flex;
     justify-content: center;
-    width: 100%;
-
+    align-items: center;
 }
 
 .header .middle p {
-    color: white;
-    overflow-wrap: break-word;
     font-size: 18px;
+    max-width: 400px;
+    padding: 20px;
 }
-
 
 .header .middle img {
     width: 400px;
     height: 150px;
+}
+
+.header .middle h2 {
+    font-size: 48px;
+    max-width: 300px;
+}
+
+.header .middle .text { 
+    color: white;
 }
